--- a/resume/templates/resume/finalize.html
+++ b/resume/templates/resume/finalize.html
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-md-4 resume-thumbnail ">
                     <div class="col">
-                        <img src="http://localhost/images/resume-preview.jpg" alt="Image">
+                        <img src="http://127.0.0.1/images/resume-preview.jpg" alt="Image">
                     </div>
                     <button type="button" class="btn btn-primary">Change Template</button>
                 </div>
@@ -581,7 +581,7 @@ fetch('/api/certifications/')
 								var query = $('#search-box-accomplishments').val();
 								if (query.length > 0) {
 									$.ajax({
-											url: 'http://localhost/summary-job-titles.php',
+											url: 'http://127.0.0.1/summary-job-titles.php',
 											type: 'POST',
 											dataType: 'json',
 											data: {
@@ -608,7 +608,7 @@ fetch('/api/certifications/')
 								var query = suggestion;
 								if (query.length > 0) {
 									$.ajax({
-										url: 'http://localhost/summary-job-titles.php',
+										url: 'http://127.0.0.1/summary-job-titles.php',
 										type: 'POST',
 										dataType: 'json',
 										data: {
@@ -674,7 +674,7 @@ fetch('/api/certifications/')
 				const loadingaccomplishments = document.getElementById('loading-accomplishments');
 				const jobtitledisplayaccomplishments = document.getElementById("jobtitledisplay-accomplishments");
 				jobtitledisplayaccomplishments.textContent = searchBoxaccomplishments.value;
-				const urlaccomplishments = `http://localhost/job-accomplishments-suggestions.php/?search_query=${searchInputaccomplishments.value}`;
+				const urlaccomplishments = `http://127.0.0.1/job-accomplishments-suggestions.php/?search_query=${searchInputaccomplishments.value}`;
 				loadingaccomplishments.style.display = 'block';
 				fetch(urlaccomplishments).then(response => response.json()).then(data => {
 					resultListaccomplishments.innerHTML = '';
@@ -734,7 +734,7 @@ fetch('/api/certifications/')
 								var query = $('#search-box-affiliations').val();
 								if (query.length > 0) {
 									$.ajax({
-											url: 'http://localhost/summary-job-titles.php',
+											url: 'http://127.0.0.1/summary-job-titles.php',
 											type: 'POST',
 											dataType: 'json',
 											data: {
@@ -761,7 +761,7 @@ fetch('/api/certifications/')
 								var query = suggestion;
 								if (query.length > 0) {
 									$.ajax({
-										url: 'http://localhost/summary-job-titles.php',
+										url: 'http://127.0.0.1/summary-job-titles.php',
 										type: 'POST',
 										dataType: 'json',
 										data: {
@@ -827,7 +827,7 @@ fetch('/api/certifications/')
 				const loadingaffiliations = document.getElementById('loading-affiliations');
 				const jobtitledisplayaffiliations = document.getElementById("jobtitledisplay-affiliations");
 				jobtitledisplayaffiliations.textContent = searchBoxaffiliations.value;
-				const urlaffiliations = `http://localhost/job-affiliations-suggestions.php/?search_query=${searchInputaffiliations.value}`;
+				const urlaffiliations = `http://127.0.0.1/job-affiliations-suggestions.php/?search_query=${searchInputaffiliations.value}`;
 				loadingaffiliations.style.display = 'block';
 				fetch(urlaffiliations).then(response => response.json()).then(data => {
 					resultListaffiliations.innerHTML = '';
@@ -1362,7 +1362,7 @@ fetch('/api/certifications/')
                         var query = $('#search-box-certifications').val();
                         if (query.length > 0) {
                             $.ajax({
-                                    url: 'http://localhost/summary-job-titles.php',
+                                    url: 'http://127.0.0.1/summary-job-titles.php',
                                     type: 'POST',
                                     dataType: 'json',
                                     data: {
@@ -1389,7 +1389,7 @@ fetch('/api/certifications/')
                         var query = suggestion;
                         if (query.length > 0) {
                             $.ajax({
-                                url: 'http://localhost/summary-job-titles.php',
+                                url: 'http://127.0.0.1/summary-job-titles.php',
                                 type: 'POST',
                                 dataType: 'json',
                                 data: {
@@ -1455,7 +1455,7 @@ fetch('/api/certifications/')
             const loadingcertifications = document.getElementById('loading-certifications');
             const jobtitledisplaycertifications = document.getElementById("jobtitledisplay-certifications");
             jobtitledisplaycertifications.textContent = searchBoxcertifications.value;
-            const urlcertifications = `http://localhost/job-certifications-suggestions.php/?search_query=${searchInputcertifications.value}`;
+            const urlcertifications = `http://127.0.0.1/job-certifications-suggestions.php/?search_query=${searchInputcertifications.value}`;
             loadingcertifications.style.display = 'block';
             fetch(urlcertifications).then(response => response.json()).then(data => {
                 resultListcertifications.innerHTML = '';
