--- a/templates/base-resume-create.html
+++ b/templates/base-resume-create.html
@@ -2,6 +2,8 @@
 <html>
     <head>
 		<link rel="stylesheet" href="{% static 'Contact Info - Zety_files/main-1.0.0.665.css' %}" id="mainCssId">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 		<style type="text/css" data-react-beautiful-dnd-always="0">
 			[data-react-beautiful-dnd-drag-handle="0"] {
 				-webkit-touch-callout: none;
